feat: se modifico el texto de bienvenida y la imagen del logo

--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
   <h1>¡Bienvenido a Ney's Pasta Place!</h1>
   <div class="info-rest">
     
-    <div class="logo-rest">
-      <img src="./images/logo.jpeg" width="300px" height="300px">
+    <div class="logo-rest container-fluid">
+      <img src="./images/logo.jpeg" class="img-fluid" width="300px" height="300px">
     </div>
-    <div class="bienvenida">
+    <div class="bienvenida container-fluid">
 
       <p>Sumérgete en el delicioso mundo de la pasta italiana en nuestro acogedor restaurante, donde cada plato está
         cuidadosamente preparado para deleitar tu paladar y satisfacer tus antojos más exigentes.</p>
         <p>En Ney's Pasta Place, fusionamos la autenticidad de las recetas tradicionales italianas con un toque de
         creatividad y frescura, utilizando ingredientes de la más alta calidad para ofrecerte una experiencia
         gastronómica única.</p>
-        <p>Ven y descubre por qué Ney's Pasta Place es el destino favorito de los amantes de la pasta. ¡Te esperamos con
+        <p>Ven y descubre por qué somos el destino favorito de los amantes de la pasta. ¡Te esperamos con
         los brazos abiertos y un plato humeante de pasta fresca!</p>
       </p>
     </div>
