feat: se cambio el title

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="./css/styles.css">
-  <title>Document</title>
+  <title>Ney's Pasta Place</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand ms-4" href="/">
+      <a class="navbar-brand ms-4" href="/index.html">
         Ney's Pasta Place
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item me-5">
-            <a class="nav-link active" href="/">Home</a>
+            <a class="nav-link active" href="/index.html">Home</a>
           </li>
           <li class="nav-item me-5">
             <a class="nav-link" href="./views/menu.html">Menu</a>
